# Inventory-Optimization-Dashboard

./: README.md
Inventory_Optimization_Dashboard_project/app/: page.tsx
Inventory_Optimization_Dashboard_project/public/: retail_inventory_data.csv
Inventory_Optimization_Dashboard_project/scripts/: PROJECT_GUIDE.md  inventory_analysis.py  inventory_queries.sql  load_data_to_sqlite.py  pyproject.toml  streamlit_app.py
